refactor: split person data from user account logic